fixed sizing and alignmentw

--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,77 @@
 html, body {
     margin: 0;
+    background-color: black;
+    width: 100%;
     height: 100%;
     box-sizing: border-box;
     font-size: large;
+    font-family: 'Open sans', sans-serif;
 }
 
-body {
-    font-family: 'Open sans', sans-serif;
+#bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-repeat: none;
 }
 
 header {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
-    gap: 1em;
+    align-items: center;
+    text-align: center;
+    margin-top: 1em;
 }
 
 header > img {
-    width: 6em;
-    height: 6em;
+    width: 8em;
+    height: 8em;
+    border: 1px solid #6A6B83;
     border-radius: 100%;
     box-shadow: 0px 2px 10px #A2ABAB;
-    margin-top: 20vh;
 }
 
 header > h1 {
     color: white;
+    font-size: 1.2em; 
     background: #7D869C;
     padding: 0.1em 0.5em;
-    margin-bottom: 20px;
+    border: 1px solid #6A6B83;
     border-radius: 1em; 
-    border: 1px solid black;
+    box-shadow: 0px 2px 2px #A2ABAB;
 }
 
 ul {
     box-sizing: border-box;
     list-style: none;
-    padding: 0;
-    margin: 2em 2em;
+    padding: 2em;
+    margin: 0 auto;
     text-align: center;
+    max-width: 480px;
 }
 
 ul > li {
-    background-color: #7EFF79;
-    border: 1px solid black;
+    background-color: rgba(126, 255, 121, 0.8);
+    border: 1px solid #6A6B83;
     border-radius: 10em;
     padding: 1em;
-    margin: 1em 0;
+    margin: 2em 0;
+    box-shadow: 0px 2px 2px #A2ABAB;
 }
 
-a {
+ul > li > a {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
     color: black;
+    font-weight: bold;
 }
 
 a:active {
